@@ -3,7 +3,7 @@
 use warnings;
 use strict;
 
-use Test::More tests => 12;
+use Test::More tests => 14;
 use Test::Exception;
 
 use Carp::Assert::More;
@@ -36,7 +36,7 @@ for my $case ( @cases ) {
 }
 
 NOT_AN_ARRAY: {
-    throws_ok( sub { assert_empty( 27 ) }, qr/Assertion failed!/ );
+    throws_ok( sub { assert_nonempty( 27 ) }, qr/Assertion failed!.+Argument is not a hash or array\./sm );
 }
 
 BLESSED_ARRAY: {
@@ -44,7 +44,10 @@ BLESSED_ARRAY: {
     lives_ok( sub { assert_empty( $array_object ) } );
 
     push( @{$array_object}, 14 );
-    throws_ok( sub { assert_empty( $array_object, 'Flooble' ) }, qr/\QAssertion (Flooble) failed!/ );
+    throws_ok( sub { assert_empty( $array_object, 'Flooble' ) }, qr/\QAssertion (Flooble) failed!\E.+Array contains 1 element\./sm );
+
+    push( @{$array_object}, 43, 'Q' );
+    throws_ok( sub { assert_empty( $array_object, 'Flooble' ) }, qr/\QAssertion (Flooble) failed!\E.+Array contains 3 elements\./sm );
 }
 
 BLESSED_HASH: {
@@ -52,7 +55,12 @@ BLESSED_HASH: {
     lives_ok( sub { assert_empty( $hash_object ) } );
 
     $hash_object->{foo} = 14;
-    throws_ok( sub { assert_empty( $hash_object, 'Flargle' ) }, qr/\QAssertion (Flargle) failed!/ );
+    throws_ok( sub { assert_empty( $hash_object, 'Flargle' ) }, qr/\QAssertion (Flargle) failed!\E.+Hash contains 1 key\./sm );
+
+    $hash_object->{blu} = 28;
+    $hash_object->{Q} = 47;
+    throws_ok( sub { assert_empty( $hash_object, 'Flargle' ) }, qr/\QAssertion (Flargle) failed!\E.+Hash contains 3 keys\./sm );
 }
+
 
 exit 0;
