@@ -36,12 +36,12 @@ for my $case ( @cases ) {
 }
 
 NOT_AN_ARRAY: {
-    throws_ok( sub { assert_nonempty( 27 ) }, qr/Assertion failed!/ );
+    throws_ok( sub { assert_nonempty( 27 ) }, qr/Assertion failed!.+Argument is not a hash or array\./sm );
 }
 
 BLESSED_ARRAY: {
     my $array_object = bless( [], 'WackyPackage' );
-    throws_ok( sub { assert_nonempty( $array_object, 'Flooble' ) }, qr/\QAssertion (Flooble) failed!/ );
+    throws_ok( sub { assert_nonempty( $array_object, 'Flooble' ) }, qr/\QAssertion (Flooble) failed!\E.+Array contains 0 elements\./sm );
 
     push( @{$array_object}, 14 );
     lives_ok( sub { assert_nonempty( $array_object ) } );
@@ -49,8 +49,11 @@ BLESSED_ARRAY: {
 
 BLESSED_HASH: {
     my $hash_object = bless( {}, 'WackyPackage' );
-    throws_ok( sub { assert_nonempty( $hash_object, 'Flargle' ) }, qr/\QAssertion (Flargle) failed!/ );
+    throws_ok( sub { assert_nonempty( $hash_object, 'Flargle' ) }, qr/\QAssertion (Flargle) failed!\E.+Hash contains 0 keys\./sm );
 
     $hash_object->{foo} = 14;
     lives_ok( sub { assert_nonempty( $hash_object ) } );
 }
+
+
+exit 0
